compiler/test-data/parser/errors/module/import_missing_declaration_name.frel
module myapp

import myapp.widgets
